--- a/css/style.css
+++ b/css/style.css
@@ -1193,8 +1193,13 @@ header {
 }
 
 .header-phone {
-  display: block;
-  padding-top: 32px;
+  display: flex;
+  padding-right: 10px;
+  width: fit-content;
+  flex-direction: column;
+  align-items: center;
+  min-width: 160px;
+  gap: 5px;
 }
 
 .header-phone a {
@@ -1213,7 +1218,10 @@ header {
 }
 
 .header-phone_text {
-  font-size: 16px;
+  font-size: 13px;
+  text-align: center;
+  min-width: 160px;
+  font-weight: 500;
 }
 
 .header-phone-reg {
