--- a/css/style.css
+++ b/css/style.css
@@ -286,7 +286,15 @@ h4, .h4 {
   font-size: 28px;
   padding: 25px 0px;
 }
-
+h5, .h5 {
+  color: #9c16b9;
+  font-family: "Nunito-Bold";
+  font-style: normal;
+  font-weight: 700;
+  line-height: 16px;
+  font-size: 16px;
+  padding: 10px 0px;
+}
 /*блоки*/
 .wrapper {
   height: 100%;
