Правка шрифта в названии

--- a/css/style-lk.css
+++ b/css/style-lk.css
@@ -3449,8 +3449,12 @@ ol.text-dogovora-items ol ol li::before {
     color: #9C16B9;
 }
 .non-scheduled-notification .h4 {
-    line-height: 26px;
-    padding-left: 15px !important;
+    padding-left: 5px !important;
+    font-weight: 700;
+    letter-spacing: 0px;
+    font-size: clamp(16px, 2.5vw, 22px);
+    line-height: clamp(18px, 2.5vw, 24px);
+    color: var(--colorFontContent) !important;
 }
 .scheduled-notification_item {
     margin: 15px 0 0 0 !important;
