--- a/css/style-lk.css
+++ b/css/style-lk.css
@@ -141,7 +141,7 @@
     background: #fff;
     border-right: 2px solid var(--main-color);
     display: flex;
-    padding: 15px;
+    padding: 5px 15px;
     justify-content: center;
     align-items: center;
 }
@@ -149,8 +149,7 @@
 .aside-lk_menu {
     display: flex;
     justify-content: center;
-    padding: 15px;
-    padding-top: 25px;
+    padding: 20px 15px 15px 15px;
 }
 
 .aside-lk_all {
@@ -474,13 +473,10 @@
     flex-direction: column;
     align-items: center;
     padding: 15px;
-    margin-top: 30px;
+    margin-top: 20px;
     height: 100%;
     min-height: 55vh;
-}
-
-.menu-lk>li {
-    margin-bottom: 30px;
+    gap: 20px;
 }
 
 .menu-lk>li>a>img {
@@ -4036,10 +4032,6 @@ a.intern-office.news:hover .intern-office_name {
     .close-menu-active::before {
         right: 47px;
         top: 50px;
-    }
-
-    .menu-lk>li {
-        margin-bottom: 20px;
     }
 
     .menu-lk>li>a>span {
