--- a/css/style-lk.css
+++ b/css/style-lk.css
@@ -1906,21 +1906,20 @@ input:-webkit-autofill {
     display: flex;
     top: -40px;
     left: 40px;
-    width: 100px;
-    height: 32px;
+    width: 140px;
+    height: 28px;
     background: var(--main-color);
     justify-content: flex-start;
     border-radius: 6px;
     color: var(--colorWhiteText);
     font-family: 'Nunito-Bold';
-    font-size: 14px;
+    font-size: 12px;
     text-transform: uppercase;
     font-weight: 700;
     align-items: center;
-   
 }
 .lable-sale-one>span::before {
-    content: 'Первый';
+    content: 'Персональный';
     position: relative;
     background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='75' height='75' fill='none' viewBox='0 0 75 75'%3e%3cg clip-path='url(%23a)'%3e%3cpath fill='%23FF5642' d='M12.667 40.262a22.2 22.2 0 0 1 11.562-15.075h.088a19.164 19.164 0 0 1 9.662-1.875 21.163 21.163 0 0 1 3.688-4.037c8.975-7.5 22.337-4.875 30 1.975 1.05.912 2.013 1.92 2.875 3.012 6.412 8.238 3.9 20.175 2.975 23.675a47.829 47.829 0 0 1-3.025 8.038l-.088.162a39.994 39.994 0 0 1-4.237 7.5c-1.988 2.588-7.4 8.638-14.488 8.988-.532.037-1.067.037-1.6 0h-.262l-.525.35a13.937 13.937 0 0 1-7.5 2.112 19.074 19.074 0 0 1-9.875-3.025 51.937 51.937 0 0 1-12.425-10.525c-3.213-3.75-6.588-8.437-7.188-14.812a21.89 21.89 0 0 1 .363-6.463Z'/%3e%3cpath fill='%2384B102' d='M18.917 8.275C10.33 3.65.567 4.912.567 4.912a37.275 37.275 0 0 0 13.275 12.975 35.001 35.001 0 0 0 17.8 3.75A33.037 33.037 0 0 0 18.917 8.275Z'/%3e%3cpath fill='%23639A00' d='M40.005 11.375A20.863 20.863 0 0 0 40.467 0a22.812 22.812 0 0 0-6.712 9.15 21.386 21.386 0 0 0-.75 11.075 20.263 20.263 0 0 0 7-8.85Z'/%3e%3c/g%3e%3cdefs%3e%3cclipPath id='a'%3e%3cpath fill='%23fff' d='M0 0h75v75H0z'/%3e%3c/clipPath%3e%3c/defs%3e%3c/svg%3e ");
     min-width: 50px;
@@ -3509,6 +3508,20 @@ ol.text-dogovora-items ol ol li::before {
 .non-scheduled-notification .uk-alert-close {
     top: -20px;
     left: 20px;
+}
+.non-scheduled-overlay {
+    position: fixed;
+    inset: 0;
+    background: rgba(255, 255, 255, 0.4);
+    backdrop-filter: blur(5px);
+    z-index: 9998;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.non-scheduled-notification {
+    z-index: 9999;
 }
 /*-------Новостная лента-----------------*/
 .lk-block-news {
