--- a/css/style.css
+++ b/css/style.css
@@ -240,9 +240,11 @@ a:hover {
 *:before {
   box-sizing: border-box;
 }
+
 .text-bold {
   font-weight: 700 !important
 }
+
 p,
 li {
   font-family: 'OpenSans';
@@ -253,7 +255,8 @@ li {
 }
 
 
-h1, .h1 {
+h1,
+.h1 {
   font-family: "Nunito-Bold";
   font-style: normal;
   font-weight: 700;
@@ -261,7 +264,8 @@ h1, .h1 {
   font-size: 64px;
 }
 
-h2, .h2 {
+h2,
+.h2 {
   font-family: 'Nunito-Bold';
   font-style: normal;
   font-weight: 700;
@@ -270,7 +274,8 @@ h2, .h2 {
   margin-bottom: 50px;
 }
 
-h3, .h3 {
+h3,
+.h3 {
   font-family: 'Nunito-Bold';
   font-style: normal;
   font-weight: 700;
@@ -279,7 +284,8 @@ h3, .h3 {
   margin-bottom: 35px;
 }
 
-h4, .h4 {
+h4,
+.h4 {
   color: #24201E;
   font-family: "Nunito-Bold";
   font-style: normal;
@@ -288,7 +294,9 @@ h4, .h4 {
   font-size: 28px;
   padding: 25px 0px;
 }
-h5, .h5 {
+
+h5,
+.h5 {
   color: #9c16b9;
   font-family: "Nunito-Bold";
   font-style: normal;
@@ -297,6 +305,7 @@ h5, .h5 {
   font-size: 16px;
   padding: 10px 0px;
 }
+
 /*блоки*/
 .wrapper {
   height: 100%;
@@ -534,15 +543,23 @@ h5, .h5 {
 .color24 {
   background-color: #FFB31F !important;
 }
+
 .color25 {
   background-color: #46C1ED !important;
 }
+
 .color26 {
   background-color: #D41B19 !important;
 }
+
 .color27 {
   background-color: #fcf7feeb !important;
 }
+
+.color28 {
+  background-color: #e2f7f2 !important;
+}
+
 .bordercolor1 {
   border-color: #33C7A2 !important;
 }
@@ -582,15 +599,19 @@ h5, .h5 {
 .bordercolor10 {
   border-color: #FFB31F !important;
 }
+
 .bordercolor11 {
   border-color: #46C1ED !important;
 }
-.bordercolor12{
+
+.bordercolor12 {
   border-color: #325DE9 !important;
 }
-.bordercolor13{
+
+.bordercolor13 {
   border-color: #AE00D4 !important;
 }
+
 .textcolor1 {
   color: #7DDF9B !important;
 }
@@ -662,30 +683,34 @@ h5, .h5 {
 .textcolor18 {
   color: #fff !important;
 }
+
 /*радиусы*/
-.br-20{
+.br-20 {
   border-radius: 20px;
 }
 
 /*кнопки*/
-.a-non{
+.a-non {
   cursor: auto;
   padding-top: 150px;
-	margin-top: -150px;
-	-webkit-background-clip: content-box;
-	background-clip: content-box;
+  margin-top: -150px;
+  -webkit-background-clip: content-box;
+  background-clip: content-box;
   font-family: "Nunito-Bold";
   font-style: normal;
   font-weight: 500;
   line-height: 22px;
   font-size: 28px;
 }
-.a-non:hover{
+
+.a-non:hover {
   text-decoration: none;
 }
-.sidebar{
+
+.sidebar {
   will-change: min-height;
 }
+
 .sidebar-docs {
   background: #9205b1;
   padding: 10px;
@@ -694,6 +719,7 @@ h5, .h5 {
   display: flex;
   flex-direction: column;
 }
+
 .sidebar-docs>li>a {
   color: #fff;
   padding: 10px;
@@ -707,15 +733,19 @@ h5, .h5 {
   display: flex;
   transition: all 0.5s;
 }
-.sidebar-docs>li>a:hover{
+
+.sidebar-docs>li>a:hover {
   background: #fff;
   color: #9C16B9;
 }
-.sidebar__inner{
-  transform: translate(0, 0); /* For browsers don't support translate3d. */
+
+.sidebar__inner {
+  transform: translate(0, 0);
+  /* For browsers don't support translate3d. */
   transform: translate3d(0, 0, 0);
   will-change: position, transform;
 }
+
 .scrollup {
   width: 105px;
   height: 105px;
@@ -890,7 +920,9 @@ a.button-menu:hover {
   display: none;
 }
 
-.button-menu-lk, .button-menu-lk-ex, .button-menu-lk-en {
+.button-menu-lk,
+.button-menu-lk-ex,
+.button-menu-lk-en {
   background-position: center center;
   background-size: 30px 30px;
   position: relative;
@@ -2686,10 +2718,12 @@ a.tab-button-reviews {
   border-bottom: 1px solid #292929;
   padding: 10px 0 30px 0px;
 }
+
 .accordion-answer ul>li:nth-last-child(1) {
   border-bottom: 1px solid transparent;
   padding: 10px 0 10px 0px;
 }
+
 .accordion-answer ul>li>a {
   font-family: 'Nunito-Bold';
   font-style: normal;
@@ -5237,6 +5271,19 @@ ol.lessons-list li:before {
   width: 550px;
 }
 
+.banner-trend-dop_img-nachsc-aplle2-1 {
+  bottom: 140px !important;
+  left: 90% !important;
+  width: clamp(100px, 12vw, 150px);
+}
+
+.banner-trend-dop_img-nachsc-aplle3-1 {
+  width: clamp(100px, 22vw, 200px);
+  top: -90px !important;
+  left: 65% !important;
+  bottom: 0px !important;
+}
+
 /*Заголовки страницы напрапвлений*/
 .title-trend-block {
   font-family: 'Nunito-Black';
@@ -5250,9 +5297,11 @@ ol.lessons-list li:before {
 .color-text-1 {
   color: #24201E !important;
 }
+
 .header-work {
   display: none;
 }
+
 /*адаптив до 1580*/
 @media (max-width: 1580px) {
   .banner-trend-dop_img-logoped-aplle2 {
@@ -5640,10 +5689,12 @@ ol.lessons-list li:before {
     min-width: 100px;
     font-weight: 500;
     padding: 10px 20px 0;
-}
+  }
+
   .sidebar-docs {
     max-width: 270px;
-}
+  }
+
   .banner-trend-dop_img-malisham-aplle1 {
     left: -702px;
     top: -772px;
@@ -5662,11 +5713,13 @@ ol.lessons-list li:before {
     bottom: 2323px;
   }
 
-  h1, .h1 {
+  h1,
+  .h1 {
     font-size: 58px;
   }
 
-  h3, .h3 {
+  h3,
+  .h3 {
     font-size: 40px;
     line-height: 40px;
   }
@@ -5940,7 +5993,8 @@ ol.lessons-list li:before {
     line-height: 28px;
   }
 
-  h1, .h1 {
+  h1,
+  .h1 {
     font-size: 54px;
   }
 
@@ -5977,7 +6031,8 @@ ol.lessons-list li:before {
 @media (max-width: 959.5px) {
   .sidebar {
     margin-bottom: 40px;
-}
+  }
+
   .sidebar-docs {
     max-width: 100%;
     width: 100% !important;
@@ -5985,7 +6040,7 @@ ol.lessons-list li:before {
     top: 0 !important;
     left: 0 !important;
     transform: translate3d(0, 0, 0) !important;
-}
+  }
 
   .banner-trend-dop_img-doprazvitie,
   .banner-trend-dop_img-srscola,
@@ -6807,23 +6862,27 @@ ol.lessons-list li:before {
 @media (max-width: 650px) {
   .a-non {
     font-size: 22px;
-}
+  }
+
   .lessons-list-dop2 {
     margin-top: 520px !important;
     margin-bottom: -280px !important;
   }
 
-  h2, .h2 {
+  h2,
+  .h2 {
     font-size: 28px;
     line-height: 28px;
   }
 
-  h3, .h3 {
+  h3,
+  .h3 {
     font-size: 28px;
     line-height: 28px;
   }
 
-  h4, .h4 {
+  h4,
+  .h4 {
     line-height: 28px;
     font-size: 22px;
   }
@@ -7393,18 +7452,21 @@ ol.lessons-list li:before {
 @media (max-width: 561px) {
   .button-menu-telefon {
     margin: 0 5px;
-}
+  }
+
   .header-logo {
     max-width: 170px;
     padding-top: 0px;
-}
+  }
+
   .header-work {
     display: block;
     font-size: 13px;
   }
+
   .header-phone_text {
     display: none;
-}
+  }
 
   .button-two-mobile-header {
     display: block;
@@ -7815,10 +7877,12 @@ ol.lessons-list li:before {
 @media (max-width: 420px) {
   .header-work {
     font-size: 3.5vw;
-}
+  }
+
   .header-logo {
     max-width: 48%;
-}
+  }
+
   .lessons-list-dop2 {
     margin-top: 520px !important;
     margin-bottom: -516px !important;
@@ -8359,6 +8423,7 @@ table.punkt td>ul>li::before {
   margin: 10px -10px 20px 10px;
   background: #fefcfe;
 }
+
 .areas-of-work_test {
   border: 0px;
   padding: 0px;
@@ -8366,6 +8431,7 @@ table.punkt td>ul>li::before {
   margin: 0;
   background: transparent;
 }
+
 .areas-of-work>div>label {
   font-family: "Nunito-Bold";
   font-size: 20px;
@@ -9528,6 +9594,7 @@ section.math-hach>.seven-section>.seven-section-block {
   gap: 20px;
   padding: 30px 20px;
 }
+
 .section-menu_lk {
   justify-content: start;
   padding: 20px 0px 35px;
@@ -9649,23 +9716,28 @@ section.math-hach>.seven-section>.seven-section-block {
   background: #20A0A0 !important;
   border: 2px solid #20A0A0 !important;
 }
+
 .section-menu_lk>li>a {
   background: #fff;
   border: 2px solid #9205b1;
   color: #2A3B4F;
 }
+
 .section-menu_lk>li:hover>a {
   color: #fff;
 }
+
 .section-menu_lk>li:nth-child(2n+2)>a:hover {
   background: #cc7dc3;
   border: 2px solid #cc7dc3;
 }
+
 .section-menu_lk>li>a.active {
   background: #9205b1;
   border: 2px solid #9205b1;
   color: #fff;
 }
+
 @media (max-width: 451px) {
   .section-menu>li>a {
     padding: 15px 15px;
@@ -9990,8 +10062,8 @@ section.math-hach>.seven-section>.seven-section-block {
 @container pricing-item (min-width: 434px) {
   .pricing-header_top_hit {
     background: rgb(255, 255, 255);
-    background: linear-gradient(45deg, rgba(255, 255, 255, 1) 81%, #33c7a2 81%, #33c7a2  90%, rgba(255, 255, 255, 1) 90%) !important;
-}
+    background: linear-gradient(45deg, rgba(255, 255, 255, 1) 81%, #33c7a2 81%, #33c7a2 90%, rgba(255, 255, 255, 1) 90%) !important;
+  }
 }
 
 @container pricing-item (min-width: 450px) {
@@ -10057,13 +10129,16 @@ section.math-hach>.seven-section>.seven-section-block {
   justify-content: center;
   min-height: 120px;
 }
+
 .pricing-item_one_old {
   text-decoration: line-through;
 }
+
 .pricing-item_set .pricing-item_one_old {
   font-weight: 500;
   font-size: 18px;
 }
+
 .pricing-item_one>div {
   font-family: "Nunito-Bold";
   font-style: normal;
@@ -10084,17 +10159,20 @@ section.math-hach>.seven-section>.seven-section-block {
   font-size: 40px;
 }
 
-.pricing-item_one>div:nth-child(2), .pricing-item_one>div:nth-child(3) {
+.pricing-item_one>div:nth-child(2),
+.pricing-item_one>div:nth-child(3) {
   font-size: 16px;
 }
 
 .pricing-item_one>div>span {
   color: inherit;
 }
+
 .pricing-item_one .pricing-item_one_old {
   font-size: 24px !important;
   display: flex;
 }
+
 .pricing-item_set {
   display: flex;
   flex-direction: column;
@@ -10246,6 +10324,7 @@ section.math-hach>.seven-section>.seven-section-block {
   background: #fff;
   border: 2px solid #FFB31F;
 }
+
 .button-color-11 {
   background: #46C1ED;
   border: 2px solid #46C1ED;
@@ -10256,6 +10335,7 @@ section.math-hach>.seven-section>.seven-section-block {
   background: #fff;
   border: 2px solid #46C1ED;
 }
+
 .button-color-12 {
   background: #325DE9;
   border: 2px solid #325DE9;
@@ -10266,6 +10346,7 @@ section.math-hach>.seven-section>.seven-section-block {
   background: #fff;
   border: 2px solid #325DE9;
 }
+
 .button-color-13 {
   background: #AE00D4;
   border: 2px solid #AE00D4;
@@ -10284,9 +10365,11 @@ section.math-hach>.seven-section>.seven-section-block {
   bottom: 38px;
   position: relative;
 }
-.pricing-header_top_hit2{
+
+.pricing-header_top_hit2 {
   background: linear-gradient(45deg, rgba(255, 255, 255, 1) 76%, #33c7a2 76%, #33c7a2 88%, rgba(255, 255, 255, 1) 88%);
-} 
+}
+
 .pricing-header_top_normal {
   height: 125px;
   bottom: 38px;
