--- a/css/style-lk.css
+++ b/css/style-lk.css
@@ -794,6 +794,19 @@ input:-webkit-autofill {
     height: 100%;
 }
 
+.color-next-class-card-2.educator>.card-lk_title {
+    min-height: fit-content;
+    height: fit-content;
+}
+
+.color-next-class-card-2.educator>.card-lk_content {
+    padding-bottom: 15px;
+}
+
+.color-next-class-card-2.educator>.card-lk_content>p {
+    margin-bottom: 0;
+}
+
 .color-next-class-card.educator.parental>.card-lk_title {
     background: var(--colorBlockCardOne) !important;
 }
@@ -1018,6 +1031,7 @@ input:-webkit-autofill {
 .label-height {
     height: fit-content !important;
 }
+
 .card-lk_button>button {
     border: none;
     background: none;
@@ -1874,7 +1888,7 @@ input:-webkit-autofill {
     color: var(--colorWhiteText);
 }
 
- 
+
 .activity-packages>.lable-sale {
     display: block;
     height: 0px;
@@ -1896,11 +1910,13 @@ input:-webkit-autofill {
     font-size: 14px;
     font-weight: 700;
 }
+
 .lable-sale-one {
     display: flex;
     justify-content: flex-end;
     height: 0;
 }
+
 .lable-sale-one>span {
     position: relative;
     display: flex;
@@ -1918,6 +1934,7 @@ input:-webkit-autofill {
     font-weight: 700;
     align-items: center;
 }
+
 .lable-sale-one>span::before {
     content: 'Персональный';
     position: relative;
@@ -1932,6 +1949,7 @@ input:-webkit-autofill {
     flex-direction: row;
     padding: 19px 10px 10px 55px;
 }
+
 .activity-packages_content.sale {
     display: flex;
     flex-direction: row;
@@ -2866,7 +2884,7 @@ table.operation-history>tbody .write-off td:nth-of-type(5) {
 .slots_time>form>div>div>input.occupied.uk-checkbox:checked,
 .slots_time>form>div>div>input.occupied.uk-checkbox:disabled:checked,
 .slots_time>form>div>div>input.occupied.uk-checkbox:disabled {
-   
+
     background-color: var(--main-color);
     border: 2px solid var(--main-color);
     background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2214%22%20height%3D%2211%22%20viewBox%3D%220%200%2014%2011%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%3Cpolygon%20fill%3D%22%23fff%22%20points%3D%2212%201%205%207.5%202%205%201%205.5%205%2010%2013%201.5%22%20%2F%3E%0A%3C%2Fsvg%3E%0A");
@@ -2899,6 +2917,7 @@ table.operation-history>tbody .write-off td:nth-of-type(5) {
     text-align: center;
     border-radius: 50%;
 }
+
 .standart-checkbox {
     border: 1px solid var(--main-color) !important;
     border-radius: 5px;
@@ -2912,14 +2931,16 @@ table.operation-history>tbody .write-off td:nth-of-type(5) {
     border: 2px solid var(--main-color) !important;
     background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2214%22%20height%3D%2211%22%20viewBox%3D%220%200%2014%2011%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%20%20%3Cpolygon%20fill%3D%22%23fff%22%20points%3D%2212%201%205%207.5%202%205%201%205.5%205%2010%2013%201.5%22%20%2F%3E%0A%3C%2Fsvg%3E%0A") !important;
 }
+
 .standart-checkbox-block {
     display: flex;
     padding: 15px;
     align-items: center;
     gap: 10px;
-    border-bottom: 1px solid  var(--main-color);
+    border-bottom: 1px solid var(--main-color);
 }
- .standart-checkbox-block label{
+
+.standart-checkbox-block label {
     font-family: 'Nunito-Bold';
     font-style: normal;
     font-weight: 700;
@@ -2927,6 +2948,7 @@ table.operation-history>tbody .write-off td:nth-of-type(5) {
     font-size: 16px;
     line-height: 20px;
 }
+
 /*-----------------------------------------*/
 .assent_title {
     font-family: 'Nunito-Bold';
@@ -3312,9 +3334,11 @@ ol.text-dogovora-items ol ol li::before {
     gap: 10px;
     width: 45%;
 }
+
 .intern-office_list-2 {
     width: 100%;
 }
+
 .intern-office_list>li {
     font-family: "Nunito-Bold";
     font-style: normal;
@@ -3344,6 +3368,7 @@ ol.text-dogovora-items ol ol li::before {
 .intern-office_list_class-2 {
     font-weight: 600 !important;
 }
+
 .intern-office_info-classes {
     margin: 25px 0 0;
     display: flex;
@@ -3416,7 +3441,8 @@ ol.text-dogovora-items ol ol li::before {
 .info-block {
     background: transparent;
 }
-.info-block > .uk-alert-close {
+
+.info-block>.uk-alert-close {
     position: relative;
     top: 75px;
     float: right;
@@ -3430,10 +3456,12 @@ ol.text-dogovora-items ol ol li::before {
     background-repeat: no-repeat;
     transition: all 0.3s;
 }
-.info-block > .uk-alert-close:hover {
+
+.info-block>.uk-alert-close:hover {
     background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none' viewBox='0 0 24 24'%3e%3cg clip-path='url(%23a)'%3e%3ccircle cx='12' cy='12' r='11.5' fill='%23AE00D4' stroke='%23AE00D4'/%3e%3cpath fill='%23fff' fill-rule='evenodd' d='M6.116 6.116a1.25 1.25 0 0 1 1.768 0L12 10.232l4.116-4.116a1.25 1.25 0 0 1 1.768 1.768L13.768 12l4.116 4.116a1.25 1.25 0 0 1-1.768 1.768L12 13.768l-4.116 4.116a1.25 1.25 0 0 1-1.768-1.768L10.232 12 6.116 7.884a1.25 1.25 0 0 1 0-1.768Z' clip-rule='evenodd'/%3e%3c/g%3e%3cdefs%3e%3cclipPath id='a'%3e%3cpath fill='%23fff' d='M0 0h24v24H0z'/%3e%3c/clipPath%3e%3c/defs%3e%3c/svg%3e ");
-} 
-.info-block > .uk-alert-close> svg{
+}
+
+.info-block>.uk-alert-close>svg {
     display: none;
 }
 
@@ -3449,6 +3477,7 @@ ol.text-dogovora-items ol ol li::before {
     background-color: rgba(255, 255, 255, 0.7);
     color: #9C16B9;
 }
+
 .non-scheduled-notification .h4 {
     padding-left: 5px !important;
     font-weight: 700;
@@ -3457,16 +3486,19 @@ ol.text-dogovora-items ol ol li::before {
     line-height: clamp(18px, 2.5vw, 24px);
     color: var(--colorFontContent) !important;
 }
+
 .scheduled-notification_item {
     margin: 15px 0 0 0 !important;
     gap: 10px;
 }
+
 .scheduled-notification_item>div:nth-child(1) {
     padding: 15px;
     border-radius: 10px;
     background-color: #9C16B9;
     margin: 0 5px;
 }
+
 .scheduled-notification_item>div:nth-child(1)>div {
     display: flex;
     align-items: center;
@@ -3485,33 +3517,42 @@ ol.text-dogovora-items ol ol li::before {
     transition: all .5s;
     margin: 0 5px !important;
 }
+
 .scheduled-notification_item .back-to-site-lk:hover {
     border: 2px solid var(--main-color);
     background: var(--main-color);
 }
-.scheduled-notification_item .back-to-site-lk::after{
+
+.scheduled-notification_item .back-to-site-lk::after {
     display: block;
 }
+
 .non-scheduled-notification .uk-slideshow-items {
     aspect-ratio: 17 / 2 !important;
 }
+
 .non-scheduled-notification .uk-position-center-right {
     right: -25px;
 }
+
 .non-scheduled-notification .uk-position-center-left {
     left: -25px;
 }
+
 .non-scheduled-notification .uk-slidenav {
     color: #9c16b9;
     padding-top: 20px;
 }
-.non-scheduled-notification a>svg{
+
+.non-scheduled-notification a>svg {
     width: 10px;
 }
+
 .non-scheduled-notification .uk-alert-close {
     top: -20px;
     left: 20px;
 }
+
 .non-scheduled-overlay {
     position: fixed;
     inset: 0;
@@ -3526,6 +3567,7 @@ ol.text-dogovora-items ol ol li::before {
 .non-scheduled-notification {
     z-index: 9999;
 }
+
 /*-------Новостная лента-----------------*/
 .lk-block-news {
     display: flex;
@@ -3533,22 +3575,28 @@ ol.text-dogovora-items ol ol li::before {
     gap: 20px;
     padding: 30px 0;
 }
+
 a.intern-office.news {
     text-decoration: none !important;
     margin: 0;
 }
+
 a.intern-office.news:hover {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
 }
+
 a.intern-office.news:hover .intern-office_name {
     color: #9C16B9;
 }
+
 .lk-block-news .intern-office_name>span {
     background: var(--colorEducator);
 }
+
 .intern-office_name>span.noread {
     background: var(--colorDanger);
 }
+
 .lk-news-icons {
     position: relative;
     height: 0;
@@ -3563,6 +3611,7 @@ a.intern-office.news:hover .intern-office_name {
     transform: scale(.98);
     animation: pulse 2.5s ease-in-out infinite;
 }
+
 .lk-news-icons::before {
     display: block;
     content: '';
@@ -3577,54 +3626,64 @@ a.intern-office.news:hover .intern-office_name {
     left: -7px;
     z-index: -1;
 }
- 
+
 @keyframes pulse {
     from {
         transform: scale(.98);
-      }
-      50% {
+    }
+
+    50% {
         transform: scale(1);
-         
-      }
-      to {
+
+    }
+
+    to {
         transform: scale(.98);
-      }
-  } 
-  .menu-lk.active .lk-news-icons {
+    }
+}
+
+.menu-lk.active .lk-news-icons {
     top: -20px;
     left: 6px;
 }
+
 .menu-slide-lk-mobile>ul>li>a>div.lk-news-icons {
     top: -47px;
     left: -4px;
 }
+
 /*-------Адаптив------------------*/
 
-@media  (max-width: 800px) {
+@media (max-width: 800px) {
     .non-scheduled-notification .uk-slideshow-items {
         aspect-ratio: 17 / 3 !important;
     }
 }
-@media  (max-width: 640px) {
+
+@media (max-width: 640px) {
     .non-scheduled-notification .uk-slideshow-items {
         aspect-ratio: 17 / 6 !important;
     }
 }
-@media  (max-width: 580px) {
+
+@media (max-width: 580px) {
     .non-scheduled-notification {
-       margin-bottom: 50px;
+        margin-bottom: 50px;
     }
 }
-@media  (max-width: 480px) {
+
+@media (max-width: 480px) {
     .non-scheduled-notification .uk-slideshow-items {
         aspect-ratio: 17 / 8 !important;
     }
 }
-@media  (max-width: 375px) {
+
+@media (max-width: 375px) {
     .non-scheduled-notification .uk-slideshow-items {
         aspect-ratio: 17 / 12 !important;
     }
 }
+
 @container room-type (max-width: 500px) {
     .card-lk_button.room-type {
         grid-auto-flow: row;
@@ -3966,8 +4025,9 @@ a.intern-office.news:hover .intern-office_name {
         width: 100%;
     }
 }
+
 @container next-class-card-educator (max-width: 360px) {
-   
+
     .card-lk_title-pay>span.payment-error {
         height: 40px;
     }
@@ -4006,6 +4066,7 @@ a.intern-office.news:hover .intern-office_name {
         top: -20px;
         left: 5px;
     }
+
     .header-top-lk {
         padding: 0 20px;
     }
@@ -4861,12 +4922,15 @@ a.intern-office.news:hover .intern-office_name {
     border-radius: 5px;
     transition: all 0.2s;
 }
+
 .kebab:hover {
     background: var(--colorWhiteText);
 }
-.kebab:hover figure{
+
+.kebab:hover figure {
     background: var(--colorEducator);
 }
+
 .nav-kebab {
     display: flex;
     position: relative;
@@ -4907,7 +4971,7 @@ a.intern-office.news:hover .intern-office_name {
     min-width: 25px;
     height: 25px;
     min-height: 25px;
-    background: #d41b19 !important; 
+    background: #d41b19 !important;
     /* transform: scale(4); */
     transition: all 0.5s cubic-bezier(0.32, 2.04, 0.85, 0.54);
     border: 2px solid #d41b19;
@@ -5060,6 +5124,7 @@ a.intern-office.news:hover .intern-office_name {
         align-content: flex-start;
         padding: 25px;
     }
+
     .nav-kebab {
         top: 30px;
     }
