Свободные заявки - правки стиля

--- a/css/style-lk.css
+++ b/css/style-lk.css
@@ -2921,7 +2921,7 @@ table.operation-history>tbody .write-off td:nth-of-type(5) {
     border-radius: 50%;
 }
 
-.slot-info {
+.slot-info-2 {
     font-weight: 800;
     color: var(--colorEducator);
     font-size: 18px;
