--- a/css/style.css
+++ b/css/style.css
@@ -10203,6 +10203,16 @@ section.math-hach>.seven-section>.seven-section-block {
   padding: 0 15px;
 }
 
+.pricing-item_postscript {
+    font-size: 0.7rem;
+    padding: 0 20px;
+    font-weight: 500;
+    text-align: center;
+    color: #565656;
+    position: absolute;
+    top: 75%;
+}
+
 .pricing-item_button {
   display: flex;
   justify-content: center;
@@ -10396,8 +10406,8 @@ section.math-hach>.seven-section>.seven-section-block {
 }
 
 .pricing-item_set_hit {
-  min-height: 125px;
-  bottom: 25px;
+  min-height: 150px;
+  bottom: 35px;
 }
 
 .btn-reviews-pricing_mobile {
